--- a/lab-intro_to_ml.ipynb
+++ b/lab-intro_to_ml.ipynb
@@ -210,9 +210,21 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8693, 14)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "spaceship.shape"
    ]
   },
   {
@@ -224,11 +236,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      object\n",
+       "HomePlanet       object\n",
+       "CryoSleep        object\n",
+       "Cabin            object\n",
+       "Destination      object\n",
+       "Age             float64\n",
+       "VIP              object\n",
+       "RoomService     float64\n",
+       "FoodCourt       float64\n",
+       "ShoppingMall    float64\n",
+       "Spa             float64\n",
+       "VRDeck          float64\n",
+       "Name             object\n",
+       "Transported        bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "spaceship.dtypes"
    ]
   },
   {
@@ -240,11 +278,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId       0\n",
+       "HomePlanet      201\n",
+       "CryoSleep       217\n",
+       "Cabin           199\n",
+       "Destination     182\n",
+       "Age             179\n",
+       "VIP             203\n",
+       "RoomService     181\n",
+       "FoodCourt       183\n",
+       "ShoppingMall    208\n",
+       "Spa             183\n",
+       "VRDeck          188\n",
+       "Name            200\n",
+       "Transported       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "spaceship.isna().sum()"
    ]
   },
   {
@@ -262,11 +326,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before: (8693, 14) After: (6606, 14)\n",
+      "Remaining missing values: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Drop rows with any missing values\n",
+    "spaceship_clean = spaceship.dropna().reset_index(drop=True)\n",
+    "\n",
+    "# Quick check\n",
+    "print(\"Before:\", spaceship.shape, \"After:\", spaceship_clean.shape)\n",
+    "print(\"Remaining missing values:\", spaceship_clean.isna().sum().sum())"
    ]
   },
   {
@@ -289,9 +368,24 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Age', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']\n",
+      "X shape: (6606, 6)\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Keep only numeric feature columns for KNN\n",
+    "num_cols = spaceship_clean.select_dtypes(include=[np.number]).columns\n",
+    "X = spaceship_clean[num_cols].copy()\n",
+    "\n",
+    "print(num_cols.tolist())\n",
+    "print(\"X shape:\", X.shape)\n"
    ]
   },
   {
@@ -305,9 +399,27 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transported\n",
+      "Transported        3327\n",
+      "Not transported    3279\n",
+      "Name: count, dtype: int64\n",
+      "y shape: (6606,)\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Target column (binary: True/False -> 1/0)\n",
+    "target_col = \"Transported\"\n",
+    "y = spaceship_clean[target_col].astype(int)   # make it numeric for KNN\n",
+    "\n",
+    "print(y.value_counts().rename(index={1:'Transported', 0:'Not transported'}))\n",
+    "print(\"y shape:\", y.shape)\n"
    ]
   },
   {
@@ -328,9 +440,23 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5284, 6) (1322, 6) (5284,) (1322,)\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# 80/20 train–test split (stratified for class balance)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.20, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)\n"
    ]
   },
   {
@@ -360,9 +486,33 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.752\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# KNN CLASSIFIER (scale features inside a pipeline)\n",
+    "knn_clf = make_pipeline(\n",
+    "    StandardScaler(),\n",
+    "    KNeighborsClassifier(n_neighbors=7)  # you can tune this\n",
+    ")\n",
+    "\n",
+    "# train\n",
+    "knn_clf.fit(X_train, y_train)\n",
+    "\n",
+    "# quick check\n",
+    "acc = knn_clf.score(X_test, y_test)\n",
+    "print(f\"Test accuracy: {acc:.3f}\")\n"
    ]
   },
   {
@@ -376,9 +526,35 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train accuracy: 0.7973126419379258\n",
+      "Test accuracy : 0.7518910741301059\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# KNN classifier (scale features inside the pipeline)\n",
+    "knn = make_pipeline(\n",
+    "    StandardScaler(),\n",
+    "    KNeighborsClassifier(n_neighbors=7)   # tune later if you like\n",
+    ")\n",
+    "\n",
+    "# fit\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "# quick eval\n",
+    "print(\"Train accuracy:\", knn.score(X_train, y_train))\n",
+    "print(\"Test accuracy :\", knn.score(X_test, y_test))\n",
+    "\n"
    ]
   },
   {
@@ -390,11 +566,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy : 0.7519\n",
+      "ROC AUC  : 0.8130\n",
+      "\n",
+      "Confusion matrix:\n",
+      " [[467 189]\n",
+      " [139 527]]\n",
+      "\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.7706    0.7119    0.7401       656\n",
+      "           1     0.7360    0.7913    0.7627       666\n",
+      "\n",
+      "    accuracy                         0.7519      1322\n",
+      "   macro avg     0.7533    0.7516    0.7514      1322\n",
+      "weighted avg     0.7532    0.7519    0.7515      1322\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, roc_auc_score\n",
+    "\n",
+    "# predictions\n",
+    "y_pred = knn.predict(X_test)\n",
+    "y_proba = knn.predict_proba(X_test)[:, 1]  # for AUC\n",
+    "\n",
+    "# metrics\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "auc = roc_auc_score(y_test, y_proba)\n",
+    "\n",
+    "print(f\"Accuracy : {acc:.4f}\")\n",
+    "print(f\"ROC AUC  : {auc:.4f}\")\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"\\nConfusion matrix:\\n\", cm)\n",
+    "\n",
+    "print(\"\\nClassification report:\\n\",\n",
+    "      classification_report(y_test, y_pred, digits=4))"
    ]
   },
   {
@@ -407,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
